--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -33,4 +33,6 @@ services:
       POSTGRES_USER: ${PSQL_USER} 
       POSTGRES_PASSWORD: ${PSQL_PASSWORD} 
       POSTGRES_DB: ${PSQL_DATABASE} 
+    volumes:
+      - ~/data/myblogportal/psql:/var/lib/postgresql/data/pgdata
     logging: *highlight-logging
